added 007C TIR
